--- a/src/knitr_example.Rmd
+++ b/src/knitr_example.Rmd
@@ -1,3 +1,16 @@
+---
+title: "Rooftop PV"
+output:
+  html_document:
+    toc: true
+  knitrBootstrap::bootstrap_document:
+    title: "Rooftop PV"
+    theme: United
+    highlight: sunburst
+    theme.chooser: TRUE
+    highlight.chooser: TRUE
+---
+
 ## An example Knitr/R Markdown document
 
 [Ryan Elmore](http://rtelmore.github.io/)
